force-app/main/default/objects/PGIServicesInformation__c/PGIServicesInformation__c.object-meta.xml
<CustomObject>
    <label>CPQ - Contract General Content</label>
    <nameField>
        <label>PGIPDFServicesInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ - Contract General Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>