force-app/main/default/objects/PGIServicesInformation__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <inlineHelpText>These values are defined by iContract, and adding values here that iContract does not use on its own will have no effect!</inlineHelpText>
    <label>Agreement Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription License Order</fullName>
            </value>
            <value>
                <fullName>Subscription License Agreement</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Rate Modification Amendment</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>TPx Service Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>