force-app/main/default/objects/PGIServicesInformation__c/fields/Auto_Add_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Product_Family__c</fullName>
    <label>Auto Add Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automated Audio</fullName>
            </value>
            <value>
                <fullName>BlueBird</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Operator Assisted</fullName>
            </value>
            <value>
                <fullName>Skype For Business</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>TPx UCaaS</fullName>
            </value>
            <value>
                <fullName>UCaaS</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>