force-app/main/default/objects/PGIServicesInformation__c/fields/Auto_Add_Region__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Region__c</fullName>
    <label>Auto Add Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>