force-app/main/default/objects/PGIServicesInformation__c/fields/Auto_Add_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Verbiage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Add Verbiage</label>
    <type>Checkbox</type>
</CustomField>