force-app/main/default/objects/PGIServicesInformation__c/fields/Content_RTF__c.field-meta.xml
<CustomField>
    <fullName>Content_RTF__c</fullName>
    <description>iContract requires the Rich Text Format for language, but it&apos;s very hard to convert the type of a field in use...</description>
    <inlineHelpText>iContract requires the Rich Text Format for language, but it&apos;s very hard to convert the type of a field in use...</inlineHelpText>
    <label>Content RTF</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>