force-app/main/default/objects/PGIServicesInformation__c/fields/Contract_General_Content__c.field-meta.xml
<CustomField>
    <fullName>Contract_General_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SelfLookup</description>
    <label>Contract General Content</label>
    <referenceTo>PGIServicesInformation__c</referenceTo>
    <relationshipLabel>CPQ - Contract General Content</relationshipLabel>
    <relationshipName>CPQ_Contract_General_Content</relationshipName>
    <type>Lookup</type>
</CustomField>