force-app/main/default/objects/PGIServicesInformation__c/fields/For_SLO_MSA__c.field-meta.xml
<CustomField>
    <fullName>For_SLO_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For SLO/MSA</label>
    <type>Checkbox</type>
</CustomField>