force-app/main/default/objects/PGIServicesInformation__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Header for the Contract Verbiage</description>
    <inlineHelpText>Header for the Contract Verbiage</inlineHelpText>
    <label>Header</label>
    <type>TextArea</type>
</CustomField>