force-app/main/default/objects/PGIServicesInformation__c/fields/PGi_Internal_Entity__c.field-meta.xml
<CustomField>
    <fullName>PGi_Internal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Internal Entity</label>
    <referenceTo>PGi_Internal_Entity__c</referenceTo>
    <relationshipLabel>CPQ - Contract General Content</relationshipLabel>
    <relationshipName>CPQ_Contract_General_Content</relationshipName>
    <type>Lookup</type>
</CustomField>