force-app/main/default/objects/PGIServicesInformation__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>These values are defined by iContract, and adding values here that iContract does not use on its own will have no effect!</inlineHelpText>
    <label>Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Intro Table</fullName>
                <default>true</default>
                <label>Pre-Intro Table</label>
            </value>
            <value>
                <fullName>Intro</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Services and Pricing Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>