force-app/main/default/objects/PGIServicesInformation__c/fields/Specific_Product_Family_Usage__c.field-meta.xml
<CustomField>
    <fullName>Specific_Product_Family_Usage__c</fullName>
    <description>Used to filter the Contract General Content. If this is specified, the contract must have one of the product families listed in order to be added.</description>
    <inlineHelpText>Used to filter the Contract General Content. If this is specified, the contract must have one of the product families listed in order to be added.</inlineHelpText>
    <label>Specific Product Family Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automated Audio</fullName>
            </value>
            <value>
                <fullName>BlueBird</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Operator Assisted</fullName>
            </value>
            <value>
                <fullName>Skype For Business</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>TPx UCaaS</fullName>
            </value>
            <value>
                <fullName>UCaaS</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>