force-app/main/default/objects/PGIServicesInformation__c/fields/Version_History__c.field-meta.xml
<CustomField>
    <fullName>Version_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version History</label>
    <referenceTo>Version_History__c</referenceTo>
    <relationshipLabel>CPQ - Contract General Content</relationshipLabel>
    <relationshipName>CPQ_Contract_General_Content</relationshipName>
    <type>Lookup</type>
</CustomField>