force-app/main/default/objects/PGIServicesInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Language__c</columns>
    <columns>Section__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Header__c</columns>
    <columns>Order__c</columns>
    <columns>Region__c</columns>
    <columns>For_SLO_MSA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>