force-app/main/default/objects/PGIServicesInformation__c/listViews/Rate_Modification_Records.listView-meta.xml
<ListView>
    <fullName>Rate_Modification_Records</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Language__c</columns>
    <columns>Section__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Header__c</columns>
    <columns>Order__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agreement_Type__c</field>
        <operation>includes</operation>
        <value>Rate Modification Amendment</value>
    </filters>
    <label>Rate Modification Records</label>
    <language>en_US</language>
</ListView>