force-app/main/default/objects/PGIServicesInformation__c/listViews/TPx.listView-meta.xml
<ListView>
    <fullName>TPx</fullName>
    <columns>NAME</columns>
    <columns>Unique_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Language__c</columns>
    <columns>Section__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Header__c</columns>
    <columns>Order__c</columns>
    <columns>Region__c</columns>
    <columns>For_SLO_MSA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agreement_Type__c</field>
        <operation>includes</operation>
        <value>TPx Service Agreement</value>
    </filters>
    <label>TPx</label>
    <language>en_US</language>
</ListView>